# distNet

./: .gitignore  CMakeLists.txt  README.md  biggerwepouns.csv  main.cpp  parse.py  plotEpochToPrecisionAndAccuracy.py  plotNodeEpochTime.py  testTrainSplit.py
data/: airline_passenger_satisfaction_y.csv
dummyEpoch/: metrics.txt  nodes_computation_time.txt
splitData/: airline_passenger_satisfaction_y_test.csv  airline_passenger_satisfaction_y_train.csv
src/: Matrix.cpp  Matrix.h  NeuralNet.cpp  NeuralNet.h
src/layers/: ActivationLayer.h  Convolutional.h  Dropout.h  FullyConnected.h  LReLu.h  Layer.h  ReLu.h
src/loss/: LogLoss.h  Loss.cpp  Loss.h  SoftmaxCEntropyClassification.h
src/util/: io.cpp  io.h
